--- a/test.Rmd
+++ b/test.Rmd
@@ -1,39 +1,34 @@
 ---
-title: "test theme"
-subtitle: "test subtitle"
-date: '`r format(Sys.time(), "%Y-%m-%d")`'
+title: "test"
+author: "Ben Best"
+date: "January 5, 2016"
 output: html_document
 ---
 
-```{r, echo=FALSE, purl=FALSE, message = FALSE}
-source("setup.R")
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Heading1
+## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-### Heading1a
-
+### H3
 
 ```{r cars}
 summary(cars)
 ```
 
-### Heading1b
+#### H4
 
-
-## Heading2
+## Including Plots
 
 You can also embed plots, for example:
 
-### Heading2a
 ```{r pressure, echo=FALSE}
 plot(pressure)
 ```
 
-### Heading2b
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
