--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "index"
+title: "Environmental Informatics"
+subtitle: ESM 296-3W (Winter 2016)
 date: "January 5, 2016"
 output: html_document
 ---
