--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Environmental Informatics"
-subtitle: ESM 296-3W (Winter 2016)
+subtitle: ESM 296-3W (winter 2016)
 date: "January 5, 2016"
 output: html_document
 ---
