--- a/wk02_program/rmarkdown.Rmd
+++ b/wk02_program/rmarkdown.Rmd
@@ -121,10 +121,15 @@ The Arithmetic mean is equal to $\frac{1}{n} \sum_{i=i}^{n} x_{i}$, or the summa
 
 Rstudio: menu File > New File > Rmarkdown... Document, HTML. Knit HMTL button.
 
-- [first.**Rmd**](https://github.com/ucsb-bren/env-info/blob/gh-pages/wk01_github/first.Rmd)
-- [first.**html**](https://ucsb-bren.github.io/env-info/wk01_github/first.html) 
+- [first.**Rmd**](https://github.com/ucsb-bren/env-info/blob/gh-pages/wk02_program/first.Rmd)
+- [first.**html**](https://ucsb-bren.github.io/env-info/wk02_program/first.html)
 
-Rstudio: menu Help > Markdown Quick Reference
+## Help
+
+- Rstudio menu Help > [Markdown Quick Reference](http://rmarkdown.rstudio.com/authoring_basics.html)
+- [R Markdown Cheat Sheet](../refs/cheatsheets/rmarkdown-cheatsheet.pdf)
+- [R Markdown Reference Guide](../refs/cheatsheets/rmarkdown-reference.pdf)
+- [Mastering Markdown · GitHub Guides](https://guides.github.com/features/mastering-markdown/)
 
 ## Further Resources
 
