--- a/students/bbest.Rmd
+++ b/students/bbest.Rmd
@@ -10,7 +10,6 @@ output: html_document
 What is your burning environmental question that you'd like to address? Feel free to provide group project, dissertation, and/or personal interest. What's the study area?
 
 ![cool idea](images/bbest_cool-idea.png)
-
         
 ## Techniques
         
@@ -18,4 +17,12 @@ What techniques from the course do you think will be most applicable?
         
 ## Data
         
-  What data have you already identified? Feel free to provide a link and/or details on the variables of interest.
+What data have you already identified? Feel free to provide a link and/or details on the variables of interest.
+  
+Here is some data from [Shipping in Canada (2011)](http://www.statcan.gc.ca/pub/54-205-x/2011000/part-partie1-eng.htm):
+  
+```{r}
+ports_bc = read.csv('data/bbest_ports-bc.csv')
+summary(ports_bc)
+```
+
