--- a/students/knboysen.Rmd
+++ b/students/knboysen.Rmd
@@ -31,14 +31,14 @@ sea_data<-data.frame(impacts, temp)
 colnames(sea_data)<- c("sea_rise", "ave_temp")
 
 model<-lm(sea_rise~ ave_temp, data=sea_data)
-plot(sea_data$ave_temp, sea_data$sea_rise, ylab = "Sea Level Rise (m)", xlab="Temp (C)", main="Sea Level Rise with Rising Temperatures")
+plot(sea_data$ave_temp, sea_data$sea_rise, ylab = "Sea Level Rise (m)", xlab="Temp (C)", main="Invented Sea Level Rise with Rising Temperatures")
 abline(model, col="red")
 ```
 
 I do think United National Environmental Programme will have some interesting data, as will NOAA.  
  
 ## Penguins
-Here is a photo of a molting, juvenile Gentoo penguin (*Pygoscelis papua*) on [King George Island](https://www.google.com/maps/place/King+George+Island,+Antarctica/@-62.0757944,-58.8658154,9z/data=!3m1!4b1!4m2!3m1!1s0xbc738f0fdffd7975:0x759c74bafe566d71), Antarctica. 
+Here is a photo of a molting, juvenile Gentoo penguin (*Pygoscelis papua*) on [King George Island](https://www.google.com/maps/place/King+George+Island,+Antarctica/@-62.0757944,-58.8658154,9z/data=!3m1!4b1!4m2!3m1!1s0xbc738f0fdffd7975:0x759c74bafe566d71), Antarctica. I took this photo in February, 2011 while working for NOAA. 
 
 <img src="images/knboysen_gentoo.jpg" width="400px"/>
 
@@ -60,4 +60,6 @@ subset<- subset(sea_level_unep_kb, Percent_land_under_5m==100)
 print(subset[,c(1,3,15)])
 ```
 
-The mean percent of land under 5m is `r mean(na.omit(sea_level_unep_kb$Percent_land_under_5m))`.  
+The mean percent of land under 5m is `r mean(na.omit(sea_level_unep_kb$Percent_land_under_5m))`%. 
+
+
