--- a/students/sparrow925.Rmd
+++ b/students/sparrow925.Rmd
@@ -13,7 +13,7 @@ I also have a [blog](www.elisewall.com) where I post projects and classwork I'm 
 
 But for practice, I thought I would tell you a little bit about Bill Murray!
 
-![](groundhogday.gif)
+![](images/sparrow925_groundhogday.gif)
 
 **How Bill Murray's Part Affects Box Office Profits**
 
