--- a/students/jebone.Rmd
+++ b/students/jebone.Rmd
@@ -10,7 +10,7 @@ output: html_document
 Specifically, we are interested in developing a data set that automatically updates as new data becomes available.
 
  
-![](images/muganda.png)
+![](images/jebone_muganda.png)
 
 More about [**citizen science**](https://en.wikipedia.org/wiki/Municipal_solid_waste)
 
