--- a/students/maierucsb.Rmd
+++ b/students/maierucsb.Rmd
@@ -29,18 +29,18 @@ I think collaborative model building and interactive plots and maps will be very
   Here is his shot chart from 2010-2011
   
   
-  ![](maierdata/2011.png)
+  ![](images/maierucsb_2011.png)
   
   Here is his shot chart so far from 2015-2016
   
   
-  ![](maierdata/2016.png)
+  ![](images/maierucsb_2016.png)
   
   As can be seen, Derrick Rose's overall shooting efficiency has plummeted... This decline can aslo be seen in his overall [stats](http://stats.nba.com/player/#!/201565/)... The future looks tragically quite dim for the former MVP.
   
 ```{r, echo=FALSE, warning=FALSE}
 # read csv
-d = read.csv(file='maierdata/DRose.csv')
+d = read.csv(file='data/maierucsb_DRose.csv')
       
 # output barplot
 barplot(as.matrix(d[2:16]),cex.names=0.5, xlab="Statistical Category",ylab="Per Game Averages",legend=d$Year)
