--- a/students/sgriff.Rmd
+++ b/students/sgriff.Rmd
@@ -26,12 +26,13 @@ Becoming more comfortable with *programming* and *data imaging* will help our GP
 ## **Data**
         
 Data for the GP has largely been collected from local water agencies and the county (historical and projected data include metered sales, water supply by source, energy requirements by source, and costs). 
-![](images/cool_idea.png)  
+
+![](images/bbest_cool-idea.png)  
 
 
 ```{r}
 
-s = read.csv('sgriff_loadyields.csv') #sgriff_loadyields indicates annual N & P flux in states' waters (in kg/yr/km^2)
+s = read.csv('data/sgriff_loadyields.tsv') #sgriff_loadyields indicates annual N & P flux in states' waters (in kg/yr/km^2)
       
 # output summary
 summary(s)
