--- a/students/adam1993.Rmd
+++ b/students/adam1993.Rmd
@@ -39,8 +39,8 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
   
 ```{r}
 # read csv
-# d = read.csv('adam1993_SurfperchData.csv')
+d = read.csv('data/adam1993_SurfperchData.csv')
       
 # output summary
-# summary(d)
+summary(d)
 ```
