--- a/students/alxsmith.Rmd
+++ b/students/alxsmith.Rmd
@@ -7,23 +7,26 @@ output:
     toc: true
     toc_depth: 2
 ---
-##Organization:
-###[Fisheries Managment](http://github.com/fishmgt)
-####@fishmgt
+## Organization
 
-##Check out this beautiful sea cucumber!
-![Awesome Sea Cucumber](alximage.png)
+[Fisheries Managment](http://github.com/fishmgt)
 
-##Interest
+@fishmgt
+
+## Check out this beautiful sea cucumber!
+
+![Awesome Sea Cucumber](images/alxsmith_cucumber.png)
+
+## Interest
+
 - Tools for Stock Assessment and development of MSY models
 - Supply Chain
 
-
-##Content
+## Content
 
 We will have a very ~~awesome~~ **interesting** question very soon. 
 
-##Techniques
+## Techniques
 
 All the techniques... *specifically*
 
@@ -31,7 +34,7 @@ All the techniques... *specifically*
 - Data Cleaning
 - Modeling with feedback loops
 
-##Data
+## Data
 
 Still deciding on which data to use. Below is sample data which includes:
 
@@ -48,16 +51,11 @@ Still deciding on which data to use. Below is sample data which includes:
 
 ```{r}
 #read csv
-
-data=read.csv("~/Documents/R/Informatics/env_info_page/students/alx_fishermen.csv")
+data = read.csv("data/alxsmith_fishermen.csv")
 
 #output summary 
 summary(data)
-
 ```
-
-
-
 
 Here's a sample plot:
 
@@ -65,5 +63,3 @@ Here's a sample plot:
 fishfactor=factor(data$fishpart, levels = c(0,1,2,3), labels=c("No Fish", "Mussle Tissue", "Whole Fish\n(sometimes)", "Whole Fish"))
 plot(fishfactor, pch=15, col=rainbow(4), main="Fish Part Consumption")
 ```
-
-
