--- a/students/sparrow925.Rmd
+++ b/students/sparrow925.Rmd
@@ -4,7 +4,7 @@ author: "Elise"
 date: "January 18, 2056"
 output: html_document
 ---
-
+#boop
 #### <span style="color:red">**Content**</span>
         
 I am interested in environmental remediation: pollution modeling and the data analysis that comes with that are my jam. I also think that the tools we are learning in this class are useful in the corporate setting -- performance metrics, etc. could all be run through tools like this.
