--- a/students/wag7.Rmd
+++ b/students/wag7.Rmd
@@ -37,11 +37,11 @@ I have no data yet as this is still on early stages.
   
 ![](images/AJM_5653.png)
 
-```{r data, echo=TRUE, eval=FALSE}
+```{r data, echo=TRUE, eval=T}
 ###DataFile
 
 #read csv
-d=read.csv('Potsherds.csv')
+d=read.csv('data/Potsherds.csv')
 
 #output summary
 summary(d)
