--- a/wk03_dplyr.Rmd
+++ b/wk03_dplyr.Rmd
@@ -2,15 +2,12 @@
 title: 'Week 3: Tutorial on Reading and Wrangling Data'
 author: "Ben Best"
 date: '`r format(Sys.time(), "%Y-%m-%d %H:%M")`'
-output:
-  html_document:
-    toc: yes
-    toc_depth: 3
-  pdf_document:
-    highlight: default
-    toc: yes
-    toc_depth: 3
 ---
+
+```{r, echo=F}
+setwd('students')
+```
+
 
 ## Github Workflows Recap
 
@@ -167,23 +164,122 @@ head(d)
 summary(d)
 ```
 
-What are the differences in data types of columns when using `read.csv` vs `read_csv`?
+What are the differences in data types of columns when using `read.csv` vs `read_csv`? Especially compare character or factor data types. For an intriguing read into the perils of using factors, check out level 8.2 of the [R_inferno.pdf](http://www.burns-stat.com/pages/Tutor/R_inferno.pdf) 9 levels of hell in R (yes, a [Dante reference](https://en.wikipedia.org/wiki/Inferno_(Dante))).
 
-### `dplry::tbl_df`
+## `dplyr` Demo
 
-Now convert to a dplyr table:
+When performing data analysis in R, code can become quite messy, making it hard to revisit and determine the sequence of operations. Commenting helps. Good variable names help. Still, at least two common issues make code difficult to understand: **multiple variables** and **nested functions**. Let's examine these issues by approaching an analysis presenting both problems, and finally see how `dplyr` offers an elegant alternative.
 
-```{r tbl_df, eval=F}
+For example, let's ask of the `surveys.csv` dataset: _**How many observations of species 'NL' appear each year?**_
+
+### Pseudocode
+
+You can write the logic out as **pseudocode** which can become later comments for the actual code:
+
+```{r pseudocode, eval=F}
+# read in csv
+# view data
+# limit columns to species and year
+# limit rows to just species "NL"
+# get count per year
+# write out csv
+```
+
+### Multiple Variables
+
+Now let's approach this code sequentially using base functions, ie natively loaded functions in R without need for additional libraries.
+
+```{r multiple variables, eval=F}
+# read in csv
+surveys = read.csv('../data/r-ecology/surveys.csv') 
+
+# view data
+head(surveys)
+summary(surveys)
+
+# limit columns to species and year
+surveys_2 = surveys[,c('species_id', 'year')]
+
+# limit rows to just species "NL"
+surveys_3 = surveys_2[surveys_2$species_id  == 'NL',]
+
+# get count per year
+surveys_4 = aggregate(species_id ~ year, data=surveys_3, FUN='length')
+
+# write to csv
+write.csv(surveys_4, 'data/surveys_bbest.csv', row.names = FALSE)
+```
+
+Because the variables are named sequentially, ie `surveys_2` to `surveys_4`, it is relatively easy to follow, but so often in the course of playing with data these names are very different. And then we quickly lose track of which operations get applied to which variables.
+
+Even with obvious variable names, there is a redunancy to assigning a new variable new to the output of each operation.
+
+### Nested Functions
+
+Another common programming trick to reduce variable naming space is to nest the output of one function as the input of the next one. 
+
+```{r nested functions, eval=F}
+# read in data
+surveys = read.csv('../data/r-ecology/surveys.csv') 
+
+# view data
+head(surveys)
+summary(surveys)
+
+# limit data with [], aggregate to count, write to csv
+write.csv(
+  aggregate(
+    species_id ~ year, 
+    data = surveys[surveys_2$species_id  == 'NL', c('species_id', 'year')], 
+    FUN = 'length'), 
+  'data/surveys_bbest.csv',
+  row.names = FALSE)
+```
+
+So the code started the same, and continues using the same functions, but these functions get applied from the input arguments to the outer containing functions, ie in a nested manner: 
+
+1. surveys gets sliced `[]` into rows and columns in one call, which gets used as the `data = ` argument to 
+
+1. `aggregate()`, which applies the `length()` function to get a count to the formula `species_id ~ year` in which the `species_id` gets split into groups based on `year`, which gets further applied as the unnamed first argument to 
+
+1. `write.csv()` which has the additional unnamed arguments specifying the output file and turning off the default option to write row numbers as names.
+
+Although we've saved space from not performing the extra naming of variables, we've made the code very difficult to read, needing to parse which functions are arguments to subsequent functions. The indentation helps readability a bit, but now let's examine a far better solution to either approaches above with `dplyr`.
+
+### Elegance with `dplyr`
+
+Next, we'll use the libraries `readr`for improved versions of reading and writing csv files, and `dplyr` for advanced data frame manipulation. Most importantly, `dplyr` uses the "then" operator `%>%` which transfers the output of on the left to the first argument of the function on the right. Most simply `surveys %>% summary()` transfers the surveys data frame into the first argument of the summary function. Use of this chaining operator seems excessive in this simple example, but is powerful when chaining together many operations on the same dataset. We get past the previous problem of multiple variable names, without the incomprehensibility of the nested awkwardness.
+
+```{r dplyr elegance, eval=F}
+# load libraries
 library(readr)
 library(dplyr)
 
-d = read_csv('../data/r-ecology/species.csv') %>%
-  tbl_df()
-d
-head(d)
-summary(d)
-glimpse(d)
+# read in csv
+surveys = read_csv('../data/r-ecology/surveys.csv') 
+
+# dplyr elegance
+surveys %T>%                          # note tee operator %T>% for glimpse
+  glimpse() %>%                       # view data
+  select(species_id, year) %>%        # limit columns
+  filter(species_id  == 'NL') %>%     # limit rows
+  group_by(year) %>%                  # get count by first grouping
+  summarize(n = n()) %>%              #   then summarize
+  write_csv('data/surveys_bbest.csv') # write out csv
 ```
+
+Now we can read from the top, starting with the data frame surveys, to see a very clear sequence of operations: 
+
+1. `glimpse()`
+1. `select()`
+1. `filter()`
+1. `group_by()`
+1. `summarize()`
+1. `write_csv()`
+
+Arguments are minimal without repeating the name of the data frame, or even needing quotations in the case of column names.
+
+The "tee" operator `%T>%` is similar to the "then" operator `%>%` in that the left side is passed to the right, but is then also teed off as the output of the right side. This is useful in this case for `glimpse` since its output is simply printed to the Console and does not otherwise return the data frame needed to continue the sequence of operations. So the "tee" operator `%T>%` is most useful for injecting intermediate operations like printing or plotting that wouldn't otherwise output a return object for continuing operations.
 
 ## Presentation
 
@@ -203,6 +299,8 @@ glimpse(d)
 
 ### Data Wrangling in R
 
+- [Data Wrangling (dplyr, readr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
+- [wrangling-webinar.pdf](wrangling-webinar.pdf)
 
 ## Footnotes
 
