--- a/students/smccutcheon.Rmd
+++ b/students/smccutcheon.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Sarah McCutcheon Env-Info. Lab 2"
+title: "Sarah McCutcheon Env-Info. Lab 2 & 3"
 output: 
   html_document:
     toc: true
